tweak spacing issues

--- a/styles/main.css
+++ b/styles/main.css
@@ -144,6 +144,12 @@ article p {
 }
 
 #img-box-model-example {
-  width: auto;
+  width: 45%;
+  height: auto;
   float: right;
+}
+
+#spacer-code-and-image {
+  height: 400px;
+  margin-bottom: 1em;
 }
